Step 1 completed.  List Available Models via LiteLLM

--- a/multi_tool_agent/notebooks/agent_team_demo.ipynb
+++ b/multi_tool_agent/notebooks/agent_team_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3dc73e95",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5c5cff83",
    "metadata": {},
    "outputs": [
@@ -103,6 +103,378 @@
     "\n",
     "\n",
     "# @markdown **Security Note:** It's best practice to manage API keys securely (e.g., using Colab Secrets or environment variables) rather than hardcoding them directly in the notebook. Replace the placeholder strings above.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "683c150a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available Models via LiteLLM:\n",
+      "- openrouter/google/gemini-pro-1.5\n",
+      "- openrouter/google/gemini-2.0-flash-001\n",
+      "- openrouter/google/gemini-pro-vision\n",
+      "- gemini-pro\n",
+      "- gemini-1.0-pro\n",
+      "- gemini-1.0-pro-001\n",
+      "- gemini-1.0-ultra\n",
+      "- gemini-1.0-ultra-001\n",
+      "- gemini-1.0-pro-002\n",
+      "- gemini-1.5-pro\n",
+      "- gemini-1.5-pro-002\n",
+      "- gemini-1.5-pro-001\n",
+      "- gemini-1.5-pro-preview-0514\n",
+      "- gemini-1.5-pro-preview-0215\n",
+      "- gemini-1.5-pro-preview-0409\n",
+      "- gemini-1.5-flash\n",
+      "- gemini-1.5-flash-exp-0827\n",
+      "- gemini-1.5-flash-002\n",
+      "- gemini-1.5-flash-001\n",
+      "- gemini-1.5-flash-preview-0514\n",
+      "- gemini-pro-experimental\n",
+      "- gemini-flash-experimental\n",
+      "- gemini-2.5-pro-exp-03-25\n",
+      "- gemini-2.0-pro-exp-02-05\n",
+      "- gemini-2.0-flash-exp\n",
+      "- gemini-2.0-flash-001\n",
+      "- gemini-2.0-flash-thinking-exp\n",
+      "- gemini-2.0-flash-thinking-exp-01-21\n",
+      "- gemini-2.5-flash-preview-05-20\n",
+      "- gemini-2.5-flash-preview-04-17\n",
+      "- gemini-2.0-flash\n",
+      "- gemini-2.0-flash-lite\n",
+      "- gemini-2.0-flash-lite-001\n",
+      "- gemini-2.5-pro-preview-05-06\n",
+      "- gemini-2.5-pro-preview-03-25\n",
+      "- gemini-2.0-flash-preview-image-generation\n",
+      "- gemini-2.5-pro-preview-tts\n",
+      "- gemini/gemini-2.5-pro-exp-03-25\n",
+      "- gemini/gemini-2.5-flash-preview-tts\n",
+      "- gemini/gemini-2.5-flash-preview-05-20\n",
+      "- gemini/gemini-2.5-flash-preview-04-17\n",
+      "- gemini/gemini-2.0-pro-exp-02-05\n",
+      "- gemini/gemini-2.0-flash-preview-image-generation\n",
+      "- gemini/gemini-2.0-flash\n",
+      "- gemini/gemini-2.0-flash-lite\n",
+      "- gemini/gemini-2.0-flash-001\n",
+      "- gemini/gemini-2.5-pro-preview-tts\n",
+      "- gemini/gemini-2.5-pro-preview-05-06\n",
+      "- gemini/gemini-2.5-pro-preview-03-25\n",
+      "- gemini/gemini-2.0-flash-exp\n",
+      "- gemini/gemini-2.0-flash-lite-preview-02-05\n",
+      "- gemini/gemini-2.0-flash-thinking-exp\n",
+      "- gemini/gemini-2.0-flash-thinking-exp-01-21\n",
+      "- gemini/gemma-3-27b-it\n",
+      "- gemini/learnlm-1.5-pro-experimental\n",
+      "- gemini/gemini-1.5-flash-002\n",
+      "- gemini/gemini-1.5-flash-001\n",
+      "- gemini/gemini-1.5-flash\n",
+      "- gemini/gemini-1.5-flash-latest\n",
+      "- gemini/gemini-1.5-flash-8b\n",
+      "- gemini/gemini-1.5-flash-8b-exp-0924\n",
+      "- gemini/gemini-exp-1114\n",
+      "- gemini/gemini-exp-1206\n",
+      "- gemini/gemini-1.5-flash-exp-0827\n",
+      "- gemini/gemini-1.5-flash-8b-exp-0827\n",
+      "- gemini/gemini-pro\n",
+      "- gemini/gemini-1.5-pro\n",
+      "- gemini/gemini-1.5-pro-002\n",
+      "- gemini/gemini-1.5-pro-001\n",
+      "- gemini/gemini-1.5-pro-exp-0801\n",
+      "- gemini/gemini-1.5-pro-exp-0827\n",
+      "- gemini/gemini-1.5-pro-latest\n",
+      "- gemini/gemini-pro-vision\n",
+      "- gemini/gemini-gemma-2-27b-it\n",
+      "- gemini/gemini-gemma-2-9b-it\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title List Available Models via LiteLLM\n",
+    "\n",
+    "from litellm import model_list\n",
+    "\n",
+    "try:\n",
+    "    print(\"Available Models via LiteLLM:\")\n",
+    "    for model in model_list:\n",
+    "        if \"gemini\" in str(model).lower():\n",
+    "            print(f\"- {model}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error listing models via LiteLLM: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "808e6992",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Environment configured.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Define Model Constants for easier use ---\n",
+    "\n",
+    "MODEL_GEMINI_FLASH = \"gemini-2.0-flash-lite\"\n",
+    "# Con gemini/ no anduvo!\n",
+    "# gemini/gemini-2.0-flash-lite\n",
+    "# gemini-2.0-flash\n",
+    "\n",
+    "# Note: Specific model names might change. Refer to LiteLLM/Provider documentation.\n",
+    "MODEL_GPT_4O = \"openai/gpt-4o\"\n",
+    "MODEL_CLAUDE_SONNET = \"anthropic/claude-sonnet-4-20250514\"\n",
+    "\n",
+    "\n",
+    "print(\"\\nEnvironment configured.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "74bcab6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Tool: get_weather called for city: New York ---\n",
+      "{'status': 'success', 'report': 'The weather in New York is sunny with a temperature of 25°C.'}\n",
+      "--- Tool: get_weather called for city: Paris ---\n",
+      "{'status': 'error', 'error_message': \"Sorry, I don't have weather information for 'Paris'.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Define the get_weather Tool\n",
+    "def get_weather(city: str) -> dict:\n",
+    "    \"\"\"Retrieves the current weather report for a specified city.\n",
+    "\n",
+    "    Args:\n",
+    "        city (str): The name of the city (e.g., \"New York\", \"London\", \"Tokyo\").\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the weather information.\n",
+    "              Includes a 'status' key ('success' or 'error').\n",
+    "              If 'success', includes a 'report' key with weather details.\n",
+    "              If 'error', includes an 'error_message' key.\n",
+    "    \"\"\"\n",
+    "    print(f\"--- Tool: get_weather called for city: {city} ---\") # Log tool execution\n",
+    "    city_normalized = city.lower().replace(\" \", \"\") # Basic normalization\n",
+    "\n",
+    "    # Mock weather data\n",
+    "    mock_weather_db = {\n",
+    "        \"newyork\": {\"status\": \"success\", \"report\": \"The weather in New York is sunny with a temperature of 25°C.\"},\n",
+    "        \"london\": {\"status\": \"success\", \"report\": \"It's cloudy in London with a temperature of 15°C.\"},\n",
+    "        \"tokyo\": {\"status\": \"success\", \"report\": \"Tokyo is experiencing light rain and a temperature of 18°C.\"},\n",
+    "    }\n",
+    "\n",
+    "    if city_normalized in mock_weather_db:\n",
+    "        return mock_weather_db[city_normalized]\n",
+    "    else:\n",
+    "        return {\"status\": \"error\", \"error_message\": f\"Sorry, I don't have weather information for '{city}'.\"}\n",
+    "\n",
+    "# Example tool usage (optional test)\n",
+    "print(get_weather(\"New York\"))\n",
+    "print(get_weather(\"Paris\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bb514902",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent 'weather_agent_v1' created using model 'gemini-2.0-flash-lite'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Define the Weather Agent\n",
+    "# Use one of the model constants defined earlier\n",
+    "AGENT_MODEL = MODEL_GEMINI_FLASH # Starting with Gemini\n",
+    "\n",
+    "weather_agent = Agent(\n",
+    "    name=\"weather_agent_v1\",\n",
+    "    model=AGENT_MODEL, # Can be a string for Gemini or a LiteLlm object\n",
+    "    description=\"Provides weather information for specific cities.\",\n",
+    "    instruction=\"You are a helpful weather assistant. \"\n",
+    "                \"When the user asks for the weather in a specific city, \"\n",
+    "                \"use the 'get_weather' tool to find the information. \"\n",
+    "                \"If the tool returns an error, inform the user politely. \"\n",
+    "                \"If the tool is successful, present the weather report clearly.\",\n",
+    "    tools=[get_weather], # Pass the function directly\n",
+    ")\n",
+    "\n",
+    "print(f\"Agent '{weather_agent.name}' created using model '{AGENT_MODEL}'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "29124ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session created: App='weather_tutorial_app', User='user_1', Session='session_001'\n",
+      "Runner created for agent 'weather_agent_v1'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Setup Session Service and Runner\n",
+    "\n",
+    "# --- Session Management ---\n",
+    "# Key Concept: SessionService stores conversation history & state.\n",
+    "# InMemorySessionService is simple, non-persistent storage for this tutorial.\n",
+    "session_service = InMemorySessionService()\n",
+    "\n",
+    "# Define constants for identifying the interaction context\n",
+    "APP_NAME = \"weather_tutorial_app\"\n",
+    "USER_ID = \"user_1\"\n",
+    "SESSION_ID = \"session_001\" # Using a fixed ID for simplicity\n",
+    "\n",
+    "# Create the specific session where the conversation will happen\n",
+    "session = await session_service.create_session(\n",
+    "    app_name=APP_NAME,\n",
+    "    user_id=USER_ID,\n",
+    "    session_id=SESSION_ID\n",
+    ")\n",
+    "print(f\"Session created: App='{APP_NAME}', User='{USER_ID}', Session='{SESSION_ID}'\")\n",
+    "\n",
+    "# --- Runner ---\n",
+    "# Key Concept: Runner orchestrates the agent execution loop.\n",
+    "runner = Runner(\n",
+    "    agent=weather_agent, # The agent we want to run\n",
+    "    app_name=APP_NAME,   # Associates runs with our app\n",
+    "    session_service=session_service # Uses our session manager\n",
+    ")\n",
+    "print(f\"Runner created for agent '{runner.agent.name}'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "448157ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Define Agent Interaction Function\n",
+    "\n",
+    "from google.genai import types # For creating message Content/Parts\n",
+    "\n",
+    "async def call_agent_async(query: str, runner, user_id, session_id):\n",
+    "  \"\"\"Sends a query to the agent and prints the final response.\"\"\"\n",
+    "  print(f\"\\n>>> User Query: {query}\")\n",
+    "\n",
+    "  # Prepare the user's message in ADK format\n",
+    "  content = types.Content(role='user', parts=[types.Part(text=query)])\n",
+    "\n",
+    "  final_response_text = \"Agent did not produce a final response.\" # Default\n",
+    "\n",
+    "  # Key Concept: run_async executes the agent logic and yields Events.\n",
+    "  # We iterate through events to find the final answer.\n",
+    "  async for event in runner.run_async(user_id=user_id, session_id=session_id, new_message=content):\n",
+    "      # You can uncomment the line below to see *all* events during execution\n",
+    "      # print(f\"  [Event] Author: {event.author}, Type: {type(event).__name__}, Final: {event.is_final_response()}, Content: {event.content}\")\n",
+    "\n",
+    "      # Key Concept: is_final_response() marks the concluding message for the turn.\n",
+    "      if event.is_final_response():\n",
+    "          if event.content and event.content.parts:\n",
+    "             # Assuming text response in the first part\n",
+    "             final_response_text = event.content.parts[0].text\n",
+    "          elif event.actions and event.actions.escalate: # Handle potential errors/escalations\n",
+    "             final_response_text = f\"Agent escalated: {event.error_message or 'No specific message.'}\"\n",
+    "          # Add more checks here if needed (e.g., specific error codes)\n",
+    "          break # Stop processing events once the final response is found\n",
+    "\n",
+    "  print(f\"<<< Agent Response: {final_response_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5e9fc40c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">>> User Query: What is the weather like in London?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Tool: get_weather called for city: London ---\n",
+      "<<< Agent Response: The weather in London is cloudy with a temperature of 15°C.\n",
+      "\n",
+      "\n",
+      ">>> User Query: How about Paris?\n",
+      "--- Tool: get_weather called for city: Paris ---\n",
+      "<<< Agent Response: I am sorry, I encountered an error when trying to retrieve the weather information for Paris.\n",
+      "\n",
+      "\n",
+      ">>> User Query: Tell me the weather in New York\n",
+      "--- Tool: get_weather called for city: New York ---\n",
+      "<<< Agent Response: The weather in New York is sunny with a temperature of 25°C.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Run the Initial Conversation\n",
+    "\n",
+    "# We need an async function to await our interaction helper\n",
+    "async def run_conversation():\n",
+    "    await call_agent_async(\"What is the weather like in London?\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID)\n",
+    "\n",
+    "    await call_agent_async(\"How about Paris?\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID) # Expecting the tool's error message\n",
+    "\n",
+    "    await call_agent_async(\"Tell me the weather in New York\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID)\n",
+    "\n",
+    "# Execute the conversation using await in an async context (like Colab/Jupyter)\n",
+    "await run_conversation()\n",
+    "\n",
+    "# --- OR ---\n",
+    "\n",
+    "# Uncomment the following lines if running as a standard Python script (.py file):\n",
+    "# import asyncio\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     try:\n",
+    "#         asyncio.run(run_conversation())\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"An error occurred: {e}\")"
    ]
   }
  ],
